--- a/bower.json
+++ b/bower.json
@@ -11,7 +11,9 @@
     "angular-route": "^1.3.0",
     "angular-sanitize": "^1.3.0",
     "angular-touch": "^1.3.0",
-    "angular-ui-router": "^0.2.13"
+    "angular-ui-router": "^0.2.13",
+    "angular-ymaps": "~0.0.3",
+    "jquery": "~2.1.3"
   },
   "devDependencies": {
     "angular-mocks": "^1.3.0"
